Fix log text spacing in copy and display

--- a/log_inspector/static/log_inspector/css/input.css
+++ b/log_inspector/static/log_inspector/css/input.css
@@ -6,6 +6,10 @@ body {
     overflow-y: scroll !important;
 }
 
+.log-entry-text {
+    white-space: pre-wrap;
+}
+
 .lds-roller {
     display: inline-block;
     position: relative;
